<resources>
    <string name="app_name">Exercicio07ElderN2</string>
    <string name="res_titulo">Gestão de Motoristas</string>
    <string name="res_nome">Nome</string>
    <string name="res_cpf">CPF</string>
    <string name="res_cnh">CNH</string>
    <string name="res_dtNascimento">Data de Nascimento</string>
    <string name="res_btnSalvar">Salvar</string>
    <string name="res_btnListar">Listar</string>
    <string name="res_btnLimpar">Limpar</string>
</resources>
