<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/motoristas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/res_titulo"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:typeface="sans"
            app:fontFamily="@font/coustard" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_nome"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_cpf"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintCnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_cnh"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formCnh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintDtNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_dtNascimento"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formDtNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="#6A5ACD"
                android:text="@string/res_btnSalvar" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnlistar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@id/btnSalvar"
                android:layout_toLeftOf="@id/btnSalvar"
                android:text="@string/res_btnListar"
                android:backgroundTint="#00CED1"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btnlimpar"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@id/btnlistar"
                android:layout_toLeftOf="@id/btnlistar"
                android:text="@string/res_btnLimpar" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>